Delta Lake properties edited as per Best practice document

--- a/delta_lake/delta_lake.properties
+++ b/delta_lake/delta_lake.properties
@@ -1,9 +1,16 @@
-
-  iceberg: |
+  delta_lake: |
     connector.name=delta_lake
 
+    # If using Starburst data catalog as Metastore
+    # hive.metastore=glue
+    # hive.metastore.glue.endpoint-url=http://starburst-portal:8080/api/v1/glue
+    # hive.metastore.glue.region=us-east-1
+    # hive.metastore.glue.catalogid=delta_lake
+    # hive.metastore.glue.aws-access-key=accesskey1
+    # hive.metastore.glue.aws-secret-key=secretkey1
+
     # If using HMS as Metastore
-    hive.metastore.uri=thrift://hive:9083
+    # hive.metastore.uri=thrift://hive:9083
     # hive.metastore=<thrift or thrift-cdp7> #only use thrift-cdp7 if connecting to CDP7.x
     # If setting up with authentication:
     # hive.metastore.authentication.type=<NONE or KERBEROS>
@@ -32,7 +39,6 @@
     # hive.metastore.unit.catalog-name=<main/catalog name in Databricks>
 
     # File System Access - Choose and configure the appropriate one(s)
-
     # Hadoop  ### Check the correct properties
     # fs.hadoop.enabled = true # Enable HDFS access if needed
     # hive.config.resources=<Comma separated list of Hadoop configuration files> # e.g. /etc/hadoop/conf/core-site.xml,/etc/hadoop/conf/hdfs-site.xml
@@ -71,36 +77,17 @@
     # # If key is in a file
     # gcs.json-key-file-path=<File path to json file containing key>
     
-    # Catalog Redirects
-    # iceberg.hive-catalog-name=<hive_catalog>>
 
-    # Enable register table for external tables:
-    iceberg.register-table-procedure.enabled=true
+    # Delta Lake Settings
+    delta.security=starburst
+    delta.register-table-procedure.enabled=true
+    delta.enable-non-concurrent-writes=true
+    delta.extended-statistics.collect-on-write=false
 
-    # # File Format & Compression Settings if Needed: ZSTD are defaults and recommended
+    # File Format & Compression Settings if Needed: ZSTD are defaults and recommended
     delta.compression-codec = ZSTD 
-
-    # # Statistics: Enabled by default, crucial for CBO 
-    # iceberg.table-statistics-enabled = true 
-    # iceberg.extended-statistics.enabled = true 
-    # iceberg.extended-statistics.collect-on-write = true 
-
-    # # Caching: Metadata cache enabled by default on coordinator
-    iceberg.metadata-cache.enabled = true
-
-    # ORC Bloom Filters can be enabled for ORC tables (requires table property)
-    # orc.bloom-filters.enabled=true # Example ORC Bloom Filter enablement (from Hive context, applicable concept)
-        
-    # Maintenance Defaults (Important to understand minimums)
-    iceberg.expire-snapshots.min-retention = 7d
-    iceberg.remove-orphan-files.min-retention = 7d
-
-    # Security Configuration
-    iceberg.security=system
-    # iceberg.security=read_only ## When connecting to Databricks using REST Catalog
 
     # MV configuration
     # materialized-views.enabled=true
     # materialized-views.namespace=catalog_hive_namespace
     # materialized-views.storage-schema=mv_cache_storage
-s
