BigQuery updated version

--- a/bigquery/bigquery.properties
+++ b/bigquery/bigquery.properties
@@ -1,18 +1,23 @@
-connector.name=bigquery
-bigquery.project-id=<project-id>
-bigquery.credentials-file=secretRef:gcs-key:key.json
-bigquery.views-enabled=true
-bigquery.views-cache-ttl=5m
-bigquery.view-materialization-project=<materialization-project-id>
-bigquery.view-materialization-dataset=<materialization-schema>
-bigquery.view-materialization-with-filter=true
-bigquery.view-expire-duration=10m
-#bigquery.skip-view-materialization=true
-bigquery.case-insensitive-name-matching=true
-bigquery.metadata.cache-ttl=30m
-bigquery.case-insensitive-name-matching.cache-ttl=30m
-bigquery.arrow-serialization.enabled=true
+bigquery: |
+    connector.name=bigquery
+    bigquery.project-id=<project-id>
+    bigquery.credentials-file=secretRef:gcs-key:key.json
+    bigquery.views-enabled=true
+    bigquery.views-cache-ttl=15m
+    bigquery.view-materialization-project=<materialization-project-id>
+    bigquery.view-materialization-dataset=<materialization-schema>
+    bigquery.view-materialization-with-filter=true
+    bigquery.view-expire-duration=30m
+    bigquery.skip-view-materialization=false
 
-managed-statistics.enabled=true
+    bigquery.arrow-serialization.enabled=true
+    bigquery.arrow-serialization.max-allocation=512MB #if worker has at least 128GB memory, adjust as needed    
+    bigquery.case-insensitive-name-matching=true
+    bigquery.metadata.cache-ttl=15m
+    bigquery.metadata.parallelism=32 #or number of cores of the coordinator
+    bigquery.case-insensitive-name-matching.cache-ttl=15m
 
-bigquery.query-results-cache.enabled=true
+    bigquery.max-parallelism= # Set to (3 * number of worker nodes)
+
+    managed-statistics.enabled=true
+    bigquery.query-results-cache.enabled=true
