Edited azure fs configs

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -79,8 +79,9 @@
 
     # ADLS
     # fs.native-azure.enabled = true
-    # azure.auth-type=ACCES_KEY #or OAuth2s
-    # azure.endpoint= <ADLS Endpoint>
+    # azure.auth-type=ACCESS_KEY #or OAuth2s
+    # azure.endpoint=<ADLS Endpoint>
+    # azure.access-key=<Access Key>
     # if using Access KEy
     # azure.access-key
     # If using OAuth2 for authentication to filesystem (ADLS)
