Corrected iceberg properties

--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -53,9 +53,6 @@
     # hive.metastore.glue.catalogid=<catalog-namespace>
     # hive.metastore.glue.aws-access-key=<sep-access-key>
     # hive.metastore.glue.aws-secret-key=<sep-secret-key>
-    # iceberg.security=system
-    # iceberg.register-table-procedure.enabled=true
-
 
     # File System Access - Choose and configure the appropriate one(s)
 
@@ -76,8 +73,9 @@
 
     # ADLS
     # fs.native-azure.enabled = true
-    # azure.auth-type=ACCES_KEY #or OAuth2s
-    # azure.endpoin= <ADLS Endpoint>
+    # azure.auth-type=ACCESS_KEY #or OAuth2s
+    # azure.accesss-key=<Access Key>
+    # azure.endpoint= <ADLS Endpoint>
     # if using Access KEy
     # azure.access-key
     # If using OAuth2 for authentication to filesystem (ADLS)
@@ -130,4 +128,3 @@
     # materialized-views.enabled=true
     # materialized-views.namespace=catalog_hive_namespace
     # materialized-views.storage-schema=mv_cache_storage
-s
