Corrected iceberg.properties

--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -73,12 +73,11 @@
 
     # ADLS
     # fs.native-azure.enabled = true
-    # azure.auth-type=ACCESS_KEY #or OAuth2s
-    # azure.accesss-key=<Access Key>
+    # azure.auth-type=ACCESS_KEY 
+    # azure.access-key=<Access Key>
     # azure.endpoint= <ADLS Endpoint>
-    # if using Access KEy
-    # azure.access-key
     # If using OAuth2 for authentication to filesystem (ADLS)
+    # azure.auth-type=OAUTH2 
     # azure.oauth.tenant-id=
     # azure.oauth.endpoint=
     # azure.oauth.client-id=
