Modified iceberg and delta_late properties

--- a/delta_lake/delta_lake.properties
+++ b/delta_lake/delta_lake.properties
@@ -5,9 +5,9 @@
     # hive.metastore=glue
     # hive.metastore.glue.endpoint-url=http://starburst-portal:8080/api/v1/glue
     # hive.metastore.glue.region=us-east-1
-    # hive.metastore.glue.catalogid=delta_lake
-    # hive.metastore.glue.aws-access-key=accesskey1
-    # hive.metastore.glue.aws-secret-key=secretkey1
+    # hive.metastore.glue.catalogid=<catalog_id>
+    # hive.metastore.glue.aws-access-key=<accesskey>
+    # hive.metastore.glue.aws-secret-key=<secretkey>
 
     # If using HMS as Metastore
     # hive.metastore.uri=thrift://hive:9083
@@ -56,11 +56,11 @@
 
     # ADLS
     # fs.native-azure.enabled = true
-    # azure.auth-type=ACCES_KEY #or OAuth2s
-    # azure.endpoin= <ADLS Endpoint>
-    # if using Access KEy
-    # azure.access-key
+    # azure.auth-type=ACCESS_KEY
+    # azure.access-key=<Access Key used for authentication>
+    # azure.endpoint=<ADLS Endpoint>
     # If using OAuth2 for authentication to filesystem (ADLS)
+    # azure.auth-type=OAUTH2
     # azure.oauth.tenant-id=
     # azure.oauth.endpoint=
     # azure.oauth.client-id=
