Replaced connection password with private key file path for snowflake jdbc

--- a/snowflake/snowflake_jdbc.properties
+++ b/snowflake/snowflake_jdbc.properties
@@ -2,11 +2,13 @@
     connector.name = snowflake_jdbc
     connection-url = jdbc:snowflake://<account_identifier>/
     connection-user = <snowflake_username>
-    connection-password = <snowflake_password>
+    snowflake.connection-private-key-file=<path to private key file>
     snowflake.warehouse=<snowflake-warehouse>
     snowflake.database=<snowflake-database>
-    snowflake.role=<snowflake-role>
-
+    
+    # Cannot be used with impersonation
+    snowflake.role=<snowflake-role> 
+    
     # Maximize Computation Pushdowns
     join-pushdown.enabled=true
     complex-expression-pushdown.enabled=true
