Added passphrase to private key file

--- a/snowflake/snowflake_jdbc.properties
+++ b/snowflake/snowflake_jdbc.properties
@@ -3,6 +3,7 @@
     connection-url = jdbc:snowflake://<account_identifier>/
     connection-user = <snowflake_username>
     snowflake.connection-private-key-file=<path to private key file>
+    snowflake.connection-private-key.passphrase=<if applicable to the private key>
     snowflake.warehouse=<snowflake-warehouse>
     snowflake.database=<snowflake-database>
     
