Update snowflake parallel connector configuration

--- a/snowflake/snowflake_parallel.properties
+++ b/snowflake/snowflake_parallel.properties
@@ -1,10 +1,12 @@
   snowflake_parallel: |
     connector.name = snowflake_parallel
     connection-url = jdbc:snowflake://<account_identifier>/
-    connection-user = <snowflake_username>
-    connection-password = <snowflake_password>
+    snowflake.connection-private-key-file=<path to private key file>
+    snowflake.connection-private-key.passphrase=<if applicable to the private key>
     snowflake.warehouse=<snowflake-warehouse>
     snowflake.database=<snowflake-database>
+
+    # Cannot be used with impersonation
     snowflake.role=<snowflake-role>
 
     # Maximize Computation Pushdowns
