Added sqlserver parallel connections count

--- a/sqlserver/sqlserver.properties
+++ b/sqlserver/sqlserver.properties
@@ -31,6 +31,10 @@ statistics.enabled=true
 # managed-statistics.cache-ttl=6h 
 # managed-statistics.cache-maximum-size=10000
 
+# Performance optimization parameters
+# Adjust as necessary. The maximum number of connections is automatically limited to the number of partitions in the table; if this number is set higher, it is ignored, and the number of partitions used instead.
+sqlserver.parallel.connections-count = 10
+
 #Bulk Operations:
 sqlserver.bulk-copy-for-write.enabled=true
 sqlserver.bulk-copy-for-write.lock-destination-table=true
